apps/production/new-new-boplats/api/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: new-new-boplats-api
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: new-new-boplats-api
  template:
    spec:
      containers:
        - name: new-new-boplats-api
          image: artifactory.local.hejsan.xyz/docker/josmase/new-new-boplats-api:v0.0.8@sha256:23eaf3ba9c53f7ddcbf560c1e00842a97e6d4d1fab33dc6387ce764594c68988
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
