apps/production/new-new-boplats/api/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-api
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats.local.hejsan.xyz`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: new-new-boplats-api
          port: http
      middlewares:
        - name: default-headers
        - name: strip-api-prefix
  tls:
    secretName: local-hejsan-xyz-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
spec:
  stripPrefix:
    prefixes:
      - "/api"
